--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/GnanaPradeepG/confusion-server-side/issues"
   },
-  "homepage": "https://github.com/GnanaPradeepG/confusion-server-side#readme"
+  "homepage": "https://github.com/GnanaPradeepG/confusion-server-side#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
+  }
 }
