--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "confusion-server-side",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "confusionserver",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GnanaPradeepG/confusion-server-side.git"
-  },
-  "author": "Gnana Pradeep",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/GnanaPradeepG/confusion-server-side/issues"
-  },
-  "homepage": "https://github.com/GnanaPradeepG/confusion-server-side#readme",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   }
 }
